--- a/selection-sort/project-visualizer/index.html
+++ b/selection-sort/project-visualizer/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Selection Sort Visualizer</h1>
     <h3>Produces new sort every 10 seconds</h3>
-    <canvas width="1000" height="1000" data-processing-sources="selection-sort-visualizer.js"></canvas>
+    <canvas width="1000" height="1000" data-processing-sources="selectionSortVisualizer.js"></canvas>
 </body>
 
 </html>
